tests/expectations/compiler/constructor/empty_custom_constructor_fail.out
Error [ESAZ0374012]: The `@custom` constructor has no statements after dead code elimination.
    --> compiler-test:4:5
     |
   4 |     @custom
     |     ^^^^^^^
   5 |     constructor() {
     |     ^^^^^^^^^^^^^^^
   6 |         let x = self.program_owner;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   7 |     }
     |     ^
     |
     = Add a non-trivial implementation
